# Cascades-Samples

./: .gitignore  README.md  Samples.sln  accelgame-accelgame-pro.html  accelgame-assets-main-qml.html  accelgame-assets-maze-qml.html  accelgame-src-accelerationsensor-cpp.html  accelgame-src-accelerationsensor-hpp.html  accelgame-src-board-cpp.html  accelgame-src-board-hpp.html  accelgame-src-gamecontroller-cpp.html  accelgame-src-gamecontroller-hpp.html  accelgame-src-main-cpp.html  accelgame-src-player-cpp.html  accelgame-src-player-hpp.html  accelgame.html  accounts-accounts-pro.html  accounts-assets-720x720-backgroundimage-qml.html  accounts-assets-accounteditor-qml.html  accounts-assets-accountviewer-qml.html  accounts-assets-backgroundimage-qml.html  accounts-assets-editorfield-qml.html  accounts-assets-main-qml.html  accounts-assets-viewerfield-qml.html  accounts-src-accounteditor-cpp.html  accounts-src-accounteditor-hpp.html  accounts-src-accounts-cpp.html  accounts-src-accounts-hpp.html  accounts-src-accountviewer-cpp.html  accounts-src-accountviewer-hpp.html  accounts-src-main-cpp.html  accounts-translations-accounts-pro.html  accounts.html  addressbook-addressbook-pro.html  addressbook-assets-720x720-addressbookscrollview-qml.html  addressbook-assets-720x720-backgroundimage-qml.html  addressbook-assets-addressbookscrollview-qml.html  addressbook-assets-backgroundimage-qml.html  addressbook-assets-contacteditor-qml.html  addressbook-assets-contactviewer-qml.html  (+1345 more)
cascadescookbookcpp/: .cproject  .project  CMakeLists.txt  CascadesCookbookCpp.vcxproj  CascadesCookbookCpp.vcxproj.filters  Makefile  Notice  bar-descriptor.xml  cascadescookbookcpp.pro  config.pri  manifest.properties  readme.txt
cascadescookbookcpp/assets/: WebViewFallback.html
cascadescookbookcpp/assets/images/: Book_background.png.amd  application-cover.amd  background.amd  title_gui_buffet_empty_box.amd
cascadescookbookcpp/assets/models/: custompickermodel.xml  sheetmodel.xml
cascadescookbookcpp/recipes/: activityindicatorrecipe.cpp  activityindicatorrecipe.h  animationrecipe.cpp  animationrecipe.h  buttonrecipe.cpp  buttonrecipe.h  colorrecipe.cpp  colorrecipe.h  datetimepickerrecipe.cpp  datetimepickerrecipe.h  docklayoutrecipe.cpp  docklayoutrecipe.h  dropdownrecipe.cpp  dropdownrecipe.h  gesturehandlerrecipe.cpp  gesturehandlerrecipe.h  imagepaintrecipe.cpp  imagepaintrecipe.h  imagerecipe.cpp  imagerecipe.h  inputrecipe.cpp  inputrecipe.h  intro.cpp  intro.h  labelrecipe.cpp  labelrecipe.h  nineslicerecipe.cpp  nineslicerecipe.h  orientationrecipe.cpp  orientationrecipe.h  pixelbufferrecipe.cpp  pixelbufferrecipe.h  progressindicatorrecipe.cpp  progressindicatorrecipe.h  selection.cpp  selectioncheckbox.cpp  selectioncheckbox.h  sliderrecipe.cpp  sliderrecipe.h  stockcurverecipe.cpp  (+3 more)
cascadescookbookcpp/recipes/customdialogrecipe/: customdialogalarm.cpp  customdialogalarm.h  customdialogrecipe.cpp  customdialogrecipe.h
cascadescookbookcpp/recipes/selectionrecipe/: selection.cpp  selection.h  selectioncheckbox.cpp  (+1 more)
cascadescookbookcpp/src/: cascadescookbookapp.cpp  cascadescookbookapp.h  main.cpp  recipeitem.cpp  recipeitem.h  recipeitemfactory.cpp  recipeitemfactory.h  uivalues.cpp  uivalues.h
cascadescookbookcpp/translations/: Makefile  cascadescookbookcpp.pro  cascadescookbookcpp.ts
hellocascades/: .cproject  .device  .project  CMakeLists.txt  HelloCascades.vcxproj  HelloCascades.vcxproj.filters  Makefile  Notice  bar-descriptor.xml  config.pri  hellocascades.pro  manifest.properties  readme.txt
hellocascades/assets/: hellocascades.qml
hellocascades/src/: hellocascadesapp.cpp  hellocascadesapp.h  main.cpp
hellocascades/translations/: Makefile  hellocascades.pro  hellocascades.ts  hellocascades_de.qm  hellocascades_de.ts  hellocascades_de_DE.ts  hellocascades_en_GB.qm  hellocascades_en_GB.ts  hellocascades_es.qm  hellocascades_es.ts  hellocascades_es_ES.ts  hellocascades_fr.qm  hellocascades_fr.ts  hellocascades_fr_FR.ts  hellocascades_it.qm  hellocascades_it.ts  hellocascades_it_IT.ts  hellocascades_ja_JP.ts  hellocascades_ko_KR.ts  hellocascades_zh_CN.ts  hellocascades_zh_TW.ts
kakel/: .cproject  .device  .project  CMakeLists.txt  Makefile  Notice  bar-descriptor.xml  config.pri  kakel.pro  manifest.properties  readme.txt
kakel/assets/: main.qml
kakel/src/: kakelapp.cpp  kakelapp.h  main.cpp
kakel/translations/: Makefile  kakel.pro
lightningcrossfadeqml/: .cproject  .device  .project  CMakeLists.txt  Makefile  bar-descriptor.xml  config.pri  lightningcrossfadeqml.pro  manifest.properties  readme.txt
lightningcrossfadeqml/assets/: lightningcrossfade.qml
lightningcrossfadeqml/src/: lightningcrossfadeapp.cpp  lightningcrossfadeapp.h  main.cpp
poemmaker/: .cproject  .project  CMakeLists.txt  Makefile  PoemMaker.vcxproj  PoemMaker.vcxproj.filters  bar-descriptor.xml  config.pri  manifest.properties  poemmaker.pro  readme.txt
poemmaker/assets/: Note.qml  main.qml  poemgenerator.js
poemmaker/src/: main.cpp  poemmaker.cpp  poemmaker.h
poemmaker/translations/: Makefile  poemmaker.pro
speedwriter/: .cproject  .device  .project  CMakeLists.txt  Makefile  Notice  SpeedWriter.vcxproj  SpeedWriter.vcxproj.filters  bar-descriptor.xml  config.pri  manifest.properties  readme.txt  speedwriter.pro
speedwriter/assets/: speedwriter.qml
speedwriter/src/: main.cpp  speedgauge.cpp  speedgauge.h  speedwriterapp.cpp  speedwriterapp.h  wordchecker.cpp  wordchecker.h
speedwriter/translations/: Makefile  speedwriter.pro
starshipsettings/: .cproject  .device  .project  CMakeLists.txt  Makefile  Notice  StarShipSettings.vcxproj  StarShipSettings.vcxproj.filters  bar-descriptor.xml  config.pri  manifest.properties  readme.txt  starshipsettings.pro
starshipsettings/assets/: CheckBoxWithText.qml  StarshipScrollView.qml  WarpDrive.qml  main.qml
starshipsettings/src/: appsettings.cpp  appsettings.h  main.cpp  starshipsettingsapp.cpp  starshipsettingsapp.h
starshipsettings/translations/: Makefile  starshipsettings.pro  starshipsettings.ts  starshipsettings_sv_SE.ts
(+3185 files in other folders)
